# ai-engine-api

./: .env.example  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  events.db  pyproject.toml  schema.sql  service.py  session_handling.py
static/: index.html  intent.html  memorials.json  newQuiz.html  newQuizResults.html  quiz-steps.json
static/css/: app.css
static/data/: topics.jsonl
static/js/: app.js
