[project]
name = "ai-engine-api"
version = "0.1.0"
description = "AI-Engine API"
authors = [
    {name = "dabadav",email = "dante.avino@alum.esci.upf.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "ai-engine @ git+https://github.com/dabadav/ai-engine.git"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
